package sortmethod;

enum Sort_method {bubble,quicksort,select,merge,insert}

public class Sort {
    public static void SortInt(int[] arr,Sort_method method)
    {
        switch (method){
        case bubble:{

        }
        case quicksort:{

        }
        case select:{

        }
        case merge:{

        }
        case insert:
        {

        }
    }
    }
}


